refactor(portfolio): extract HoldingService, add batch holdings delete, and fail-fast checks